force-app/main/default/objects/ucinn_portal_Honor_Roll_Name__c/ucinn_portal_Honor_Roll_Name__c.object-meta.xml
<CustomObject>
    <label>Honor Roll Name</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Honor Roll Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>