force-app/main/default/objects/ucinn_portal_Honor_Roll_Name__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Honor Roll Names</relationshipLabel>
    <relationshipName>ucinn_portal_Honor_Roll_Names_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>