force-app/main/default/objects/ucinn_portal_Honor_Roll_Name__c/fields/Ending_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Ending_Fiscal_Year__c</fullName>
    <label>Ending Fiscal Year</label>
    <length>8</length>
    <type>Text</type>
</CustomField>