force-app/main/default/objects/ucinn_portal_Honor_Roll_Name__c/fields/Honor_Roll_Name__c.field-meta.xml
<CustomField>
    <fullName>Honor_Roll_Name__c</fullName>
    <description>Name to be displayed on honor roll page</description>
    <label>Honor Roll Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>