force-app/main/default/objects/ucinn_portal_Honor_Roll_Name__c/fields/Joint_Contact__c.field-meta.xml
<CustomField>
    <fullName>Joint_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Honor Roll Names (Joint Contact)</relationshipLabel>
    <relationshipName>ucinn_portal_Honor_Roll_Names_Joint</relationshipName>
    <type>Lookup</type>
</CustomField>