force-app/main/default/objects/ucinn_portal_Honor_Roll_Name__c/fields/Starting_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Starting_Fiscal_Year__c</fullName>
    <label>Starting Fiscal Year</label>
    <length>8</length>
    <type>Text</type>
</CustomField>